# MasterThesis

./: README.md
Cpp/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  DM  DM.cpp  DM.hpp  LoopAll.sh  UDP.cpp  UDP.hpp  runHCpp.sh  runHLCpp.sh  runHLPy.sh  runHPy.sh  runVCpp.sh  runVLCpp.sh  runVLPy.sh  runVPy.sh
PyClass/: Benchmark.py  DMCls.py  DMCls.py~  LoopAll.sh  UDPCls.py  runHCpp.sh  runHLCpp.sh  runHLPy.sh  runHPy.sh  runVCpp.sh  runVLCpp.sh  runVLPy.sh  runVPy.sh
PyDataclass/: Benchmark.py  DMDCls.py  DMDCls.py~  LoopAll.sh  UDPDCls.py  runHCpp.sh  runHLCpp.sh  runHLPy.sh  runHPy.sh  runVCpp.sh  runVLCpp.sh  runVLPy.sh  runVPy.sh
PyDict/: Benchmark.py  DMDict.py  DMDict.py~  LoopAll.sh  UDPDict.py  runHCpp.sh  runHLCpp.sh  runHLPy.sh  runHPy.sh  runVCpp.sh  runVLCpp.sh  runVLPy.sh  runVPy.sh
PyList/: Benchmark.py  DMList.py  DMList.py~  LoopAll.sh  UDPList.py  runHCpp.sh  runHLCpp.sh  runHLPy.sh  runHPy.sh  runVCpp.sh  runVLCpp.sh  runVLPy.sh  runVPy.sh
Scripts/: calculateAverages.py  checkBenchmarkOutput.py  filterOutlier.py
Simulation/: Benchmark.cpp  Benchmark.py  CMakeLists.txt  CMakeLists.txt~  esminiLib.cpp  scenarioStart  scenarioStart.cpp  scenarioStart.py
averages/: Cpp  PyClass  PyDataclass  PyDict  PyList  timeCpp  timePyClass  timePyDataclass  timePyDict  timePyList
filteredData/: CppH-Cpp-0414-2251_27.csv.npy  CppH-Cpp-0414-2252_18.csv.npy  CppH-Cpp-0414-2253_08.csv.npy  CppH-Cpp-0414-2253_59.csv.npy  CppH-Cpp-0414-2254_50.csv.npy  CppH-Cpp-0414-2255_41.csv.npy  CppH-Cpp-0414-2256_31.csv.npy  CppH-Cpp-0414-2257_22.csv.npy  CppH-Cpp-0414-2258_12.csv.npy  CppH-Cpp-0414-2259_03.csv.npy  CppH-Cpp-0414-2259_54.csv.npy  CppH-Cpp-0414-2300_45.csv.npy  CppH-Cpp-0414-2301_35.csv.npy  CppH-Cpp-0414-2302_26.csv.npy  CppH-Cpp-0414-2303_17.csv.npy  CppH-Cpp-0414-2304_07.csv.npy  CppH-Cpp-0414-2304_58.csv.npy  CppH-Cpp-0414-2305_49.csv.npy  CppH-Cpp-0414-2306_39.csv.npy  CppH-Cpp-0414-2307_30.csv.npy  CppH-Cpp-0414-2308_21.csv.npy  CppH-Cpp-0414-2309_12.csv.npy  CppH-Cpp-0414-2310_02.csv.npy  CppH-Cpp-0414-2310_53.csv.npy  CppH-Cpp-0414-2311_44.csv.npy  CppH-Cpp-0414-2312_34.csv.npy  CppH-Cpp-0414-2313_25.csv.npy  (+8053 more)
(+8111 files in other folders)
